# e2e

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Dockerfile  README.md  cypress.config.js  nua.xml  package.json  pytest.ini
.github/: renovate.json
.github/workflows/: breaking-glass.yaml  run-benchmark-prod.yml  run-e2e-dev-extended.yml  run-e2e-dev.yml  run-e2e-gke-prod-1.yml  run-e2e-gke-stage-1.yml  run-e2e-nua-gke-stage-1.yml  run-e2e-nua-prod.yml  run-e2e-nua-stage.yml  run-e2e-nua.yml  run-e2e-nuclia-prod.yml  run-e2e-nuclia-stage.yml  run-e2e-prod.yml  run-e2e-stage-extended.yml  run-e2e-stage.yml  run-e2e-ui-starter.yml  run-e2e.yml  show-secrets.yaml  test-secrets.yaml  tmp.yaml
cypress/e2e/0-user/: 1-create-account.cy.js  2-auth.cy.js  auth.cy.js  create-account.cy.js
cypress/e2e/1-basic/: 1-resources.cy.js  2-kb-creation-flow.cy.js  3-manage-content.cy.js  4-kb-settings.cy.js  kb-creation-flow.cy.js  kb-settings.cy.js  manage-content.cy.js  resources.cy.js
cypress/e2e/2-nua/: 1-create-key-with-dashboard.cy.js  2-push-to-api.cy.js  create-key-with-dashboard.cy.js  push-to-api.cy.js
cypress/e2e/3-widget/: 1-search.cy.js  2-chat-with-your-docs.cy.js  ask.cy.js  chat-with-your-docs.cy.js  find.cy.js  search.cy.js
cypress/e2e/4-nucliaDB-admin/: kb-management-flow.cy.js  kb-management-flow.skipped.js  manage-content.cy.js
cypress/e2e/5-ui-starter/: ui-starter.cy.js
cypress/e2e/6 - rao/: rao-creation-flow.cy.js
cypress/e2e/7-content-box/: content-box-01-resources.cy.js  content-box-chat.cy.js  content-box-history.cy.js  content-box-mcp.cy.js  content-box-upload.cy.js  context-box-onboarding.cy.js
cypress/e2e/basic/0-user/: auth.cy.js  create-account.cy.js
cypress/e2e/basic/1-basic/: kb-creation-flow.cy.js  kb-settings.cy.js  manage-content.cy.js  resources.cy.js
cypress/e2e/basic/2-nua/: create-key-with-dashboard.cy.js
cypress/e2e/basic/3-widget/: ask.cy.js  find.cy.js
cypress/e2e/basic/4-nucliaDB-admin/: kb-management-flow.skipped.js  manage-content.skipped.js
cypress/e2e/basic/5-ui-starter/: ui-starter.cy.js
cypress/e2e/basic/6 - rao/: rao-creation-flow.cy.js
cypress/e2e/basic/7-content-box/: content-box-01-resources.cy.js  content-box-chat.cy.js  content-box-history.cy.js  content-box-mcp.cy.js  (+2 more)
cypress/e2e/extended/: widget-creation.cy.js
cypress/e2e/selectors/: widget-selectors.js
cypress/fixtures/: hello2.txt  hello3.txt
cypress/support/: commands.js  common.js  cowork-signup.js  e2e.js  email-helper.js  localstorage.js
nua/: .gitignore  Makefile  requirements-test.txt  requirements.txt
nua/e2e/: conftest.py
nua/e2e/assets/: field_classification.arrow  financial-new-kb.arrow  jailbreak-kb.arrow  legal-text-kb.arrow  offensive.arrow  plaintext_manual_split.txt
nua/e2e/regional/: models.py  test_da_tasks.py  test_llm_chat.py  test_llm_citation.py  test_llm_config.py  test_llm_generate.py  test_llm_json.py  test_llm_rag.py  test_llm_schema.py  test_llm_summarize.py  test_predict.py  test_processor.py  utils.py
nuclia/: requirements.txt
nuclia.py/: requirements.txt  test.py  test_crewai.py
nuclia.py/nuclia/sdk/: auth.py
nuclia/assets/: chocolatier.html
nuclia/e2e/: conftest.py  test_kb.py  test_onboarding.py
nuclia_e2e/: .gitignore  Makefile  README.md  generate_summary.py  pyproject.toml  requirements.txt
nuclia_e2e/nuclia_e2e/: models.py  settings.py  utils.py
nuclia_e2e/nuclia_e2e/assets/: chocolatier.html  financial-news-kb.arrow  plaintext_manual_split.txt  test_slides.pptx  toxic-kb.arrow
nuclia_e2e/nuclia_e2e/tests/: _patch_httpx.py  conftest.py  data.py  models.py  patch_httpx.py  test_account_models.py  test_ask_with_json_output.py  test_custom_models.py  test_default_models.py  test_download_activity_log.py  test_inception_paragraph.py  test_kb.py  test_kb_auth.py  test_kb_backup.py  test_kb_features.py  test_kb_vectorsets.py  test_onboarding.py  test_rao.py  test_reasoning.py  utils.py
nuclia_e2e/nuclia_e2e/tests/benchmarking/: test_benchmark_ingestion.py
nuclia_e2e/nuclia_e2e/tests/cloud_storage_sync/: README.md  css_helpers.py  google_drive_helpers.py  nucliadb_helpers.py  sharepoint_helpers.py  sync_helpers.py  test_google_drive.py  test_sharepoint.py
nuclia_e2e/nuclia_e2e/tests/cloud_storage_sync/seed_files/: excluded.ignore  notes.txt
nuclia_e2e/nuclia_e2e/tests/cloud_storage_sync/seed_files/subfolder/: readme.md  spreadsheet.xlsx
nuclia_e2e/nuclia_e2e/tests/nua/: test_da_tasks.py  test_llm_chat.py  test_llm_config.py  test_llm_generate.py  test_llm_json.py  test_llm_rag.py  test_llm_schema.py  test_llm_summarize.py  test_predict.py  test_processor.py
nuclia_e2e/tests/: conftest.py  test_kb.py  test_onboarding.py
